6.0.6适配完成