@@ -10,6 +10,7 @@ import com.simibubi.create.foundation.utility.CreateLang;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.SingleRecipeInput;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.Level;
@@ -22,25 +23,17 @@ import java.util.Set;
 import java.util.function.Supplier;
 
 @ParametersAreNonnullByDefault
-public class PeelingRecipe extends ProcessingRecipe<SingleRecipeInput> implements IAssemblyRecipe {
-
-    protected final PeelingRecipeParams params; // Store the specific params instance
+public class PeelingRecipe extends ProcessingRecipe<RecipeInput, PeelingRecipeParams> implements IAssemblyRecipe {
 
     public PeelingRecipe(PeelingRecipeParams params) {
         super(CreateFisheryRecipeTypes.PEELING, params);
-        this.params = params; // Assign to the field
-    }
-
-    // Getter for the serializer to access the specific params instance
-    public PeelingRecipeParams getParams() {
-        return this.params;
     }
 
     public ItemStack getPrimaryOutput() {
-        if (getRollableResults().isEmpty()) { // getRollableResults() is from ProcessingRecipe
+        if (getRollableResults().isEmpty()) {
             return ItemStack.EMPTY;
         }
-        return getRollableResults().getFirst().getStack();
+        return getRollableResults().get(0).getStack();
     }
 
     public List<ProcessingOutput> getSecondaryOutputs() {
@@ -50,18 +43,14 @@ public class PeelingRecipe extends ProcessingRecipe<SingleRecipeInput> implement
         return ImmutableList.copyOf(getRollableResults().subList(1, getRollableResults().size()));
     }
 
-    // This method is to roll results for a specific list of outputs,
-    // e.g., only secondary outputs. It calls the protected method from ProcessingRecipe.
     public List<ItemStack> rollResultsFor(List<ProcessingOutput> specificOutputs) {
-        return super.rollResults(specificOutputs); // Call the version from ProcessingRecipe that takes List<ProcessingOutput>
+        return super.rollResults(specificOutputs);
     }
 
-    // Default rollResults uses the main results list of the recipe
     @Override
     public List<ItemStack> rollResults() {
-        return super.rollResults(); // This uses this.getRollableResults() (which is this.results from ProcessingRecipe)
+        return super.rollResults();
     }
-
 
     @Override
     protected int getMaxInputCount() {
@@ -70,8 +59,7 @@ public class PeelingRecipe extends ProcessingRecipe<SingleRecipeInput> implement
 
     @Override
     protected int getMaxOutputCount() {
-        // This refers to the size of the 'results' list in ProcessingRecipeParams
-        return 1 + 8; // Example: 1 primary + up to 8 secondary
+        return 1 + 8; // 1 primary + up to 8 secondary
     }
 
     @Override
@@ -80,9 +68,20 @@ public class PeelingRecipe extends ProcessingRecipe<SingleRecipeInput> implement
     }
 
     @Override
-    public boolean matches(SingleRecipeInput input, Level level) {
+    public boolean matches(RecipeInput input, Level level) {
         if (getIngredients().isEmpty()) return false;
-        return getIngredients().getFirst().test(input.item());
+
+        // 检查输入是否为SingleRecipeInput类型
+        if (input instanceof SingleRecipeInput singleInput) {
+            return getIngredients().get(0).test(singleInput.item());
+        }
+
+        // 对于其他类型的RecipeInput，检查第一个物品
+        if (input.size() > 0) {
+            return getIngredients().get(0).test(input.getItem(0));
+        }
+
+        return false;
     }
 
     @Override
